<resources>
    <string name="app_name">Dr Freeze</string>
    <string name="validate">Validate</string>
    <string name="channel_description">Enabled apps</string>
    <string name="channel_name">Enabled Apps</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="preferences_disable_notification">preferences_disable_notification</string>
    <string name="preferences_disable_boot_notification">preferences_disable_boot_notification</string>
    <string name="preferences_show_system_apps">preferences_show_system_apps</string>
    <string name="preferences_show_only_launcher_apps">preferences_show_launcher_apps</string>
    <string name="package_icon">Package Icon</string>
    <string name="manage_apps">Manage Apps</string>
    <string name="preferences_disable_persistent_notification">preferences_disable_persistent_notification</string>
    <string name="loading_icon">loading_icon</string>
    <string name="no_application_found">No application found</string>
    <string name="preferences_bypass_root_needed">preferences_bypass_root_needed</string>
    <string name="no_root_warning">The application need root access to work properly. It may crash or dysfunction. However you can still try it at your own risks</string>
    <string name="app_icon">app icon</string>
    <string name="no_tracked_application_found">No Tracked application found</string>
    <string name="select_application">Select Application</string>
    <string name="add_applications">Add applications</string>
    <string name="exit_button">Exit</string>
    <string name="continue_button">Continue</string>
    <string name="description_create_shortcut">Create Shortcut</string>
    <string name="description_freeze_app">Freeze App</string>
    <string name="description_untrack_app">Untrack App</string>
    <string name="notification_click_action">Click to disable %s</string>
    <string name="application_not_found">Application not found, it may have been uninstalled</string>
    <string name="button_add_shortcut">Add shortcut for %s</string>
    <string name="button_freeze_app">Freeze %s</string>
    <string name="button_stop_tracking">Stop tracking %s</string>
    <string name="button_start_app">Start %s</string>
    <string name="switch_notification_status">Enable/Disable notification for %s</string>
    <string name="settings_list_apps_filtering">Application filtering</string>
    <string name="notifications_settings">Notifications</string>
    <string name="waiting_su">Requesting root access…</string>
    <string name="about">About</string>
    <string name="enable_update_mode">Enable Update Mode</string>
    <string name="disable_update_mode">Disable Update Mode</string>
    <string name="update_mode_enabled">Update mode enabled</string>
</resources>
