<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <ViewAnimator
        android:id="@+id/tracked_view_animator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/backgroundDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/animation_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/loading_icon"
            app:srcCompat="@drawable/animated_android_robot" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_icon"
                app:srcCompat="@drawable/android_robot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/no_tracked_application_found"
                android:textColor="@color/textColor" />

            <LinearLayout
                android:id="@+id/no_tracked_applications"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_applications"
                    app:srcCompat="@drawable/add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_application"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/managed_app_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </ViewAnimator>
</androidx.constraintlayout.widget.ConstraintLayout>